tests/paczka2/big_fuzzy/43159693.err
Error in line 19: gFlP A648 293,3
Error in line 26: ONaJX6RknuB S119 82,7
Error in line 29: gFlP A218 37,5
Error in line 21: aJYKG S119 99,0
Error in line 35: A218 A253 47,5
Error in line 47: A218 A648 49,7
Error in line 42: MR3 A648 70,7
Error in line 53: MR3 S119 39,6
Error in line 66: Gs15l A648 69,5
Error in line 64: ANq5F A253 58,1
Error in line 82: ONaJX6RknuB A253 71,9
Error in line 95: ONaJX6RknuB A648 184,4
Error in line 99: ANq5F S119 80,7
Error in line 103: A218 S119 24,5
Error in line 102: ANq5F A218 38,8
Error in line 109: ANq5F A253 7,5
Error in line 110: MR3 A218 37,6
Error in line 119: gFlP S119 35,4
Error in line 124: MR3 A253 12,8
Error in line 116: A218 A648 91,9
Error in line 114: ONaJX6RknuB S119 81,0
Error in line 131: A218 A218 45,5
Error in line 142: MR3 S119 32,1
Error in line 141: gFlP A648 1,8
Error in line 137: ANq5F A648 49,0
Error in line 146: MR3 S119 3,9
Error in line 161: ANq5F A648 63,2
Error in line 166: MR3 A218 4,5
Error in line 181: aJYKG A648 81,0
Error in line 196: A218 S119 46,1
Error in line 179: Gs15l S119 116,7
Error in line 193: ANq5F S119 161,2
Error in line 204: A218 A648 324,03
Error in line 197: A218 A648 82,1
Error in line 205: A218 A218 95,9
Error in line 208: ANq5F S119 13,7
Error in line 207: A218 S119 92,5
Error in line 210: A218 A218 40,4
Error in line 199: MR3 A218 248,5
Error in line 209: ANq5F A218 42,1
Error in line 244: MR3 A253 87,0
Error in line 243: gFlP A253 23,6
